--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,31 @@
   "dependencies": {
     "ant-design-vue": "^3.3.0-beta.4",
     "axios": "^1.3.2",
+    "babel": "^6.23.0",
     "bezier-easing": "^2.1.0",
     "dayjs": "^1.10.5",
+    "github-markdown-css": "^5.2.0",
+    "highlight.js": "^11.7.0",
+    "highlightjs-line-numbers.js": "^2.8.0",
     "less": "^4.1.3",
+    "marked": "^4.2.12",
+    "marked-extended-tables": "^1.0.5",
     "openai": "^3.1.0",
     "pinia": "^2.0.28",
-    "vue": "^3.2.45"
+    "prismjs": "^1.29.0",
+    "vue": "^3.2.45",
+    "vue-highlightjs": "^1.3.3",
+    "vue-hljs-with-line-number": "^1.0.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/marked": "^4.0.8",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
