--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,18 +19,23 @@
     "github-markdown-css": "^5.2.0",
     "highlight.js": "^11.7.0",
     "highlightjs-line-numbers.js": "^2.8.0",
+    "katex": "^0.16.4",
     "less": "^4.1.3",
     "marked": "^4.2.12",
     "marked-extended-tables": "^1.0.5",
+    "mathjax": "^3.2.2",
+    "mathjax-full": "^3.2.2",
     "openai": "^3.1.0",
     "pinia": "^2.0.28",
     "prismjs": "^1.29.0",
     "vue": "^3.2.45",
     "vue-highlightjs": "^1.3.3",
-    "vue-hljs-with-line-number": "^1.0.7"
+    "vue-hljs-with-line-number": "^1.0.7",
+    "vue-mathjax": "^0.1.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/katex": "^0.16.0",
     "@types/marked": "^4.0.8",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
